Add tour and new cool functionnalities !
