# TrackinExercise/src/main/swagger/generated/swagger-ui/swagger.json
@@ -10,12 +10,16 @@
       "email" : "qsupernant@gmail.com"
     }
   },
+  "host" : "/",
   "basePath" : "/api",
   "tags" : [ {
     "name" : "waypoints"
   }, {
+    "name" : "tours"
+  }, {
     "name" : "drivers"
   } ],
+  "schemes" : [ "http" ],
   "paths" : {
     "/api/drivers" : {
       "get" : {
@@ -29,6 +33,96 @@
             "description" : "OK",
             "schema" : {
               "$ref" : "#/definitions/Driver"
+            }
+          },
+          "412" : {
+            "description" : "Not connected to database"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/tours" : {
+      "get" : {
+        "tags" : [ "tours" ],
+        "summary" : "Return list of tours",
+        "description" : "",
+        "operationId" : "list",
+        "produces" : [ "application/json; charset=UTF-8" ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "schema" : {
+              "$ref" : "#/definitions/Tour"
+            }
+          },
+          "412" : {
+            "description" : "Not connected to database"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/tours/{tour_id}" : {
+      "put" : {
+        "tags" : [ "tours" ],
+        "summary" : "Update a tour",
+        "description" : "",
+        "operationId" : "update",
+        "parameters" : [ {
+          "name" : "tour_id",
+          "in" : "path",
+          "description" : "tour identifier",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "in" : "body",
+          "name" : "body",
+          "description" : "tour json data",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "SUCCESS",
+            "schema" : {
+              "type" : "string"
+            }
+          },
+          "412" : {
+            "description" : "Not connected to database"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/tours/{tour_id}/waypoints" : {
+      "get" : {
+        "tags" : [ "tours" ],
+        "summary" : "Return all waypoints from a tour",
+        "description" : "",
+        "operationId" : "listWaypoints",
+        "produces" : [ "application/json; charset=UTF-8" ],
+        "parameters" : [ {
+          "name" : "tour_id",
+          "in" : "path",
+          "description" : "tour identifier",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "schema" : {
+              "$ref" : "#/definitions/Tour"
             }
           },
           "412" : {
@@ -94,6 +188,34 @@
       }
     },
     "/api/waypoints/{waypoint_id}" : {
+      "get" : {
+        "tags" : [ "waypoints" ],
+        "summary" : "Return a waypoint from id",
+        "description" : "",
+        "operationId" : "load",
+        "produces" : [ "application/json; charset=UTF-8" ],
+        "parameters" : [ {
+          "name" : "waypoint_id",
+          "in" : "path",
+          "description" : "waypoint identifier",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "schema" : {
+              "$ref" : "#/definitions/WayPoint"
+            }
+          },
+          "412" : {
+            "description" : "Not connected to database"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        }
+      },
       "put" : {
         "tags" : [ "waypoints" ],
         "summary" : "Update a waypoint",
@@ -173,6 +295,19 @@
           "type" : "string"
         },
         "gender" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "Tour" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "driverId" : {
           "type" : "integer",
           "format" : "int32"
         }
